--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -56,6 +56,7 @@
     "@envelop/sentry": "5.0.0",
     "@escape.tech/graphql-armor": "1.7.0",
     "@graphql-yoga/plugin-csrf-prevention": "1.0.0",
+    "@graphql-yoga/plugin-persisted-operations": "1.4.0",
     "@graphql-yoga/plugin-response-cache": "1.1.2",
     "@graphql-yoga/redis-event-target": "1.0.0",
     "@klicker-uzh/graphql": "^3.0.0-alpha.0",
