--- a/packages/graphql/codegen.yml
+++ b/packages/graphql/codegen.yml
@@ -10,17 +10,17 @@ generates:
       # - "typescript-react-apollo"
       - 'typed-document-node'
       - 'fragment-matcher'
-  ./src/persisted-queries/client.json:
+  ./src/ops.schema.json:
+    plugins:
+      - 'introspection'
+  ./src/public/client.json:
     plugins:
       - graphql-codegen-persisted-query-ids:
           output: client
           algorithm: sha256
 
-  ./src/persisted-queries/server.json:
+  ./src/public/server.json:
     plugins:
       - graphql-codegen-persisted-query-ids:
           output: server
           algorithm: sha256
-  ./src/ops.schema.json:
-    plugins:
-      - 'introspection'
