--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -36,9 +36,9 @@
     }
   ],
   "peerDependencies": {
-    "graphql-yoga": "^3.0.0",
     "@klicker-uzh/grading": "^3.0.0-alpha.0",
-    "@klicker-uzh/prisma": "^3.0.0-alpha.0"
+    "@klicker-uzh/prisma": "^3.0.0-alpha.0",
+    "graphql-yoga": "^3.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.13.7",
@@ -60,6 +60,7 @@
     "@types/validator": "^13.7.5",
     "@types/web-push": "^3.3.2",
     "dotenv": "16.0.3",
+    "graphql-codegen-persisted-query-ids": "0.1.2",
     "husky": "8.0.1",
     "ioredis": "5.2.4",
     "jest": "29.2.1",
