enhance: set-up persisted queries and CSRF (#3288)

--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -54,7 +54,9 @@
   "dependencies": {
     "@envelop/response-cache-redis": "2.0.4",
     "@envelop/sentry": "5.0.0",
-    "@escape.tech/graphql-armor": "1.5.0",
+    "@escape.tech/graphql-armor": "1.7.0",
+    "@graphql-yoga/plugin-csrf-prevention": "1.0.0",
+    "@graphql-yoga/plugin-persisted-operations": "1.4.0",
     "@graphql-yoga/plugin-response-cache": "1.1.2",
     "@graphql-yoga/redis-event-target": "1.0.0",
     "@klicker-uzh/graphql": "^3.0.0-alpha.0",
@@ -66,7 +68,7 @@
     "express": "4.18.2",
     "graphql": "16.6.0",
     "graphql-ws": "5.11.2",
-    "graphql-yoga": "3.1.2",
+    "graphql-yoga": "3.4.0",
     "ioredis": "5.2.4",
     "jsonwebtoken": "8.5.1",
     "passport": "0.6.0",
